--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,12 @@ find_package(catkin REQUIRED COMPONENTS
 )
 
 catkin_package(
-  INCLUDE_DIRS include
+  #INCLUDE_DIRS include
 )
 
 
 include_directories(
-  include
+  #include
   ${catkin_INCLUDE_DIRS}
 )
 
